--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,12 @@
   <meta name="description" content="Madrid Waves is a website to unite madridistas all over the world" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Quicksand:wght@400;600;700&display=swap"
+    rel="stylesheet">
+  <title>Madrid Waves</title>
 </head>
 
 <body>
